--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
+    "react-icons": "^4.11.0",
+    "react-resizable": "^3.0.5",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
